--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body{
 
 .right{
     width: 75vw;
-    position: relative;
+    /* position: relative; */
+    height: 100vh;
     /* height: ; */
 }
 
@@ -34,9 +35,9 @@ body{
     padding-top: 14px;
     font-weight: bold;
 }
-.home{
+/* .home{
     height: 26vh;
-}
+} */
 /* .home{
     padding: 10px;
 } */
@@ -180,13 +181,18 @@ body{
     padding: 15px;
 }
 
+.spotifyPplaylist h1{
+    padding: 15px;
+}
+
+
 .cardContainer{
     display: flex;
     gap:10px;
     flex-wrap: wrap;
     margin: 30px;
-    overflow-y: scroll;
-    max-height: 70vh;
+    overflow-y: auto;
+    max-height: 60vh;
 }
 
 .card{
@@ -293,11 +299,11 @@ body{
 .playbar{
     position: fixed;   
     filter: invert(1);   
-    bottom:  20px;  
+    bottom:  18px;  
     background: #dad5d5;
     border-radius: 10px;
-    width: 70vw;
-    height: 49px;
+    width: 68vw;
+    min-height: 45px;
     padding: 12px;
 }
 
@@ -353,9 +359,9 @@ body{
     .left{
         /* background-color: red; */
         position: absolute;
-        left: -100%;
+        left: -120%;
         z-index: 1;
-        width: 45vw;
+        width: 370px;
         transition: all .3s;
         background-color: black;
     }
@@ -374,12 +380,42 @@ body{
     }
 
     .playbar{
-        width: 90%;
+        width: calc(100vw - 50px);
+        font-size: 30px;
+    }
+
+    .seekbar{
+        width: 95%;
+        /* width: calc(100vw - 55px); */
+
+    }
+
+    .abovebar{
+        margin: 12px 0;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
     }
 
     .hamburger{
         display: block;
     }
+
+    .card{
+        width: 80vw;
+        margin: 10px 0;
+    }
+
+    .cardContainer{
+        margin: 0;
+        justify-content: center;
+    }
+
+    .right{
+        margin: 0;
+    }
+
+
 }
 
 .flex{
