--- a/style.css
+++ b/style.css
@@ -302,7 +302,7 @@ body{
     bottom:  18px;  
     background: #dad5d5;
     border-radius: 10px;
-    width: 68vw;
+    width: 71vw;
     min-height: 45px;
     padding: 12px;
 }
@@ -342,9 +342,35 @@ body{
     justify-content: space-between;
 }
 
-.songinfo, .songtime{
+.timevol{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.songtime{
+    width: 120px;
+    color: black;
+    padding: 0 10px;
+}
+
+.volume{
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+#range{
+    cursor: pointer;
+} 
+
+.songinfo{
     color: black;
     padding: 0 4px;
+    width: 240px;
 }
 
 .hamburger{
@@ -364,6 +390,7 @@ body{
         width: 370px;
         transition: all .3s;
         background-color: black;
+        padding: 0;
     }
 
     .left .close{
@@ -382,6 +409,7 @@ body{
     .playbar{
         width: calc(100vw - 50px);
         font-size: 30px;
+        text-align: center
     }
 
     .seekbar{
@@ -395,6 +423,7 @@ body{
         flex-direction: column;
         gap: 20px;
         align-items: center;
+        width: 100%;
     }
 
     .hamburger{
@@ -414,6 +443,20 @@ body{
     .right{
         margin: 0;
     }
+
+    .timevol{
+        flex-direction: column;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .songtime{
+        width: 210px;
+    }
+
+
 
 
 }
