--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    --a:0;
+}
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;;
+    /* box-sizing: border-box; */
+    font-family:'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 /* .home, .library{
@@ -15,21 +22,25 @@ body{
 
 .left{
     width: 25vw;
-    padding: 8px;
+    padding: 5px;
+    height: 100vh;
 }
 
 .right{
     width: 75vw;
     /* position: relative; */
-    height: 100vh;
+    /* height: 100vh; */
     /* height: ; */
+    margin: 5px;
+    height: 100vh;
+    top: 4px;
 }
 
 
 .home ul li{
     list-style: none;
     width: 14px;
-    gap:15px;
+    gap:8px;
     display: flex;
     color: white;
     padding-top: 14px;
@@ -47,8 +58,7 @@ body{
     gap:15px;
     display: flex;
     color: white;
-    padding-top: 14px;
-    padding: 23px 14px;
+    padding: 15px 14px;
     font-size: 10px;
     font-weight: bold;
     align-items: center;
@@ -60,7 +70,7 @@ body{
 }
 
 .songlist{
-    height: 300px;
+    height: 250px;
     overflow: auto;
     margin-bottom: 60px;
 }
@@ -112,12 +122,17 @@ body{
 }
 
 .songlist .info {
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
     font-size: 13px;
-    width: 356px;
+    width: 200px;
 }
 
 .info div {
     word-break: break-all;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .playnow {
@@ -140,7 +155,7 @@ body{
 
 
 .library{
-    min-height: 80vh;
+    min-height: 75vh;
     position: relative;
 }
 
@@ -169,19 +184,21 @@ body{
     display: flex;
     justify-content: space-between;
     background-color: rgb(34 34 34);
-    height: 80px;
-    /* margin-top: 10px; */
+    align-items: center;
+    height: 72px;
 }
+
 
 .header > *{
     padding: 20px;
 }
 
 .spotifyPplaylist{
-    padding: 15px;
+    padding: 10px;
 }
 
 .spotifyPplaylist h1{
+    font-weight: 600;
     padding: 15px;
 }
 
@@ -190,18 +207,20 @@ body{
     display: flex;
     gap:10px;
     flex-wrap: wrap;
-    margin: 30px;
+    margin: 12px;
     overflow-y: auto;
-    max-height: 60vh;
+    max-height: 55vh;
 }
 
+
 .card{
-    width: 178px;
+    width: 200px;
+    padding: 2px;
     border-radius: 5px;
     background-color: #252525;
     position: relative;
-    /* padding: 10px;
-    transition: all .9s; */
+    /* /* padding: 10px; */
+    transition: all 1s; 
 }
 
 /* Additional by me */
@@ -241,12 +260,18 @@ body{
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 168px;
+    top: 155px;
     /* font-size: 411px; */
-    right: 17px;
-    /* opacity: 1; */
+    right: 10px;
+    opacity: var(--a);
     transition: all 1s ease-in;
 
+}
+
+.card:hover{
+    background-color: rgb(120, 112, 112);
+    cursor: pointer;
+    --a:1;
 }
 
 .buttons >*{
@@ -296,16 +321,22 @@ body{
     color: black;
 } */
 
-.playbar{
-    position: fixed;   
-    filter: invert(1);   
-    bottom:  18px;  
-    background: #dad5d5;
-    border-radius: 10px;
-    width: 71vw;
-    min-height: 45px;
-    padding: 12px;
+
+.playbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 21px;
+    filter: invert(1);
+    background: #e2d9d9;
+    border-radius: 8px;
+    /* width: 90%; */
+    padding: 10px;
+    width: 68vw;
+    min-height: 40px;
 }
+
 
 .songbtns{
     display: flex;
@@ -340,6 +371,7 @@ body{
 .abovebar{
     display: flex;
     justify-content: space-between;
+    gap:100px
 }
 
 .timevol{
@@ -381,87 +413,138 @@ body{
     display: none;
 }
 
-@media (max-width: 1100px){
-    .left{
-        /* background-color: red; */
+
+@media (max-width: 1160px) {
+    .left {
         position: absolute;
-        left: -120%;
-        z-index: 1;
-        width: 370px;
+        left: -130%;
         transition: all .3s;
+        z-index: 1;
+        width: 373px;
         background-color: black;
         padding: 0;
+        height: 100vh;
+        position: fixed;
+        top: 0;
     }
 
-    .left .close{
+    .songinfo,
+    .songtime {
+        width: auto;
+    }
+
+    .left .close {
         position: absolute;
-        right: 30px;
-        top: 22px;
-        width: 25px;
-        display: block;
-        cursor: pointer;
+        right: 31px;
+        top: 25px;
+        width: 29px;
     }
 
-    .right{
-        width: 100vw;
-    }
-
-    .playbar{
-        width: calc(100vw - 50px);
-        font-size: 30px;
-        text-align: center
-    }
-
-    .seekbar{
-        width: 95%;
-        /* width: calc(100vw - 55px); */
-
-    }
-
-    .abovebar{
-        margin: 12px 0;
-        flex-direction: column;
-        gap: 20px;
-        align-items: center;
-        width: 100%;
-    }
-
-    .hamburger{
-        display: block;
-    }
-
-    .card{
-        width: 80vw;
-        margin: 10px 0;
-    }
-
-    .cardContainer{
-        margin: 0;
-        justify-content: center;
-    }
-
-    .right{
-        margin: 0;
-    }
-
-    .timevol{
-        flex-direction: column;
+    .timevol {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        gap: 10px;
+        flex-direction: column;
+        gap: 13px;
     }
 
-    .songtime{
-        width: 210px;
+    .right {
+        width: 100vw;
     }
 
+    .playbar {
+        width: calc(100vw - 75px); 
+    }
 
+    .seekbar {
+        width: calc(100vw - 120px);
+    }
 
+    .hamburger {
+        display: block;
+    }
 
+    .right {
+        margin: 0;
+    }
+
+    .card {
+        width: 30vw;
+    }
+
+    .cardContainer {
+        max-height: 70vh;
+        margin: 0;
+        justify-content: center; 
+    }
+
+    .close {
+        display: block;
+    }
+
+    .abovebar {
+        flex-direction: column;
+        gap: 23px;
+        align-items: center;
+    }
+
+    .cardContainer {
+        max-height: unset;
+        overflow-y: unset;
+        margin-bottom: 35vh;
+    }
+
+    .playbar{
+        right: 25px;
+    }
+    .play{
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+    }
 }
 
-.flex{
+@media (max-width: 600px) {
+    .card {
+        width: 100%;
+    }
+
+    .playbar{
+        width: 90%;
+    }
+
+    .header>* {
+        padding: 2px;
+    }
+
+    .buttons>* {
+        margin: 0;
+    }
+
+    .header{
+        padding: 7px;
+    }
+
+    .spotifyPlaylists h1 {
+        padding: 4px;
+    }
+
+    .library{
+        height: 85vh;
+    }
+
+    .left{ 
+        width: 100vw;
+    }
+
+ 
+
+    
+}
+
+
+
+.flex{  
     display: flex;
     align-items: center;
     gap: 7px;
